--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,20 +11,25 @@
         .gradient-bg {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         }
+
         .card-hover {
             transition: all 0.3s ease;
         }
+
         .card-hover:hover {
             transform: translateY(-5px);
         }
+
         .skill-badge {
             transition: all 0.3s ease;
         }
+
         .skill-badge:hover {
             transform: scale(1.05);
         }
     </style>
 </head>
+
 <body class="bg-gray-50 text-gray-800">
     <!-- Navigation -->
     <nav class="bg-white shadow-lg fixed w-full top-0 z-50">
@@ -64,17 +70,20 @@
     <section id="home" class="gradient-bg min-h-screen flex items-center justify-center text-white">
         <div class="text-center px-4">
             <div class="mb-8">
-                <div class="w-32 h-32 bg-white rounded-full mx-auto flex items-center justify-center text-6xl text-gray-600 mb-6">
+                <div
+                    class="w-32 h-32 bg-white rounded-full mx-auto flex items-center justify-center text-6xl text-gray-600 mb-6">
                     <i class="fas fa-code"></i>
                 </div>
             </div>
             <h1 class="text-4xl md:text-6xl font-bold mb-4">Fullstack Developer</h1>
             <p class="text-xl md:text-2xl mb-8 opacity-90">Backend & Web Application Specialist</p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                <a href="#projects" class="bg-white text-blue-600 px-8 py-3 rounded-full font-semibold hover:bg-gray-100 transition-colors">
+                <a href="#projects"
+                    class="bg-white text-blue-600 px-8 py-3 rounded-full font-semibold hover:bg-gray-100 transition-colors">
                     View Projects
                 </a>
-                <a href="#contact" class="border-2 border-white px-8 py-3 rounded-full font-semibold hover:bg-white hover:text-blue-600 transition-colors">
+                <a href="#contact"
+                    class="border-2 border-white px-8 py-3 rounded-full font-semibold hover:bg-white hover:text-blue-600 transition-colors">
                     Contact Me
                 </a>
             </div>
@@ -90,16 +99,20 @@
             </div>
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div>
-                    <div class="w-full h-80 bg-gray-200 rounded-lg flex items-center justify-center text-6xl text-gray-400">
-                        <i class="fas fa-user-circle"></i>
+                    <div class="w-full h-80 bg-gray-200 rounded-lg overflow-hidden flex items-center">
+                        <img src="profil.JPG" alt="Foto Profil" class="w-full object-cover ">
                     </div>
+
+
                 </div>
                 <div>
                     <h3 class="text-2xl font-bold text-gray-800 mb-4">Fullstack / Backend Web Developer</h3>
-                    <p class="text-gray-600 mb-6 leading-relaxed">
-                        Saya adalah seorang developer berpengalaman dalam membangun aplikasi berbasis desktop dan web. 
-                        Terbiasa bekerja baik secara individu maupun tim, serta menguasai berbagai bahasa pemrograman, 
-                        framework, dan tools pendukung pengembangan perangkat lunak.
+                    <p class="text-gray-600 mb-6 leading-relaxed text-justify">
+                        Saya adalah seorang developer dengan pengalaman dalam mengembangkan aplikasi desktop maupun web.
+                        Terbiasa bekerja secara mandiri maupun dalam tim, serta menguasai beberapa bahasa pemrograman,
+                        framework, dan tools yang mendukung proses pengembangan perangkat lunak. Saya juga selalu
+                        terbuka untuk mempelajari hal-hal baru, karena percaya bahwa teknologi terus berkembang dan
+                        pembelajaran berkelanjutan adalah kunci untuk memberikan solusi terbaik.
                     </p>
                     <div class="grid grid-cols-2 gap-4">
                         <div class="bg-blue-50 p-4 rounded-lg">
@@ -135,7 +148,7 @@
                 <h2 class="text-4xl font-bold text-gray-800 mb-4">Skills & Tech Stack</h2>
                 <div class="w-20 h-1 bg-blue-600 mx-auto"></div>
             </div>
-            
+
             <div class="grid md:grid-cols-3 gap-8">
                 <!-- Programming Languages -->
                 <div class="bg-white p-8 rounded-xl shadow-lg">
@@ -144,19 +157,24 @@
                         <h3 class="text-xl font-bold text-gray-800">Programming Languages</h3>
                     </div>
                     <div class="space-y-3">
-                        <div class="skill-badge bg-red-100 text-red-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
+                        <div
+                            class="skill-badge bg-red-100 text-red-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
                             <i class="fab fa-java mr-2"></i> Java
                         </div>
-                        <div class="skill-badge bg-purple-100 text-purple-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
+                        <div
+                            class="skill-badge bg-purple-100 text-purple-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
                             <i class="fab fa-php mr-2"></i> PHP
                         </div>
-                        <div class="skill-badge bg-blue-100 text-blue-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
+                        <div
+                            class="skill-badge bg-blue-100 text-blue-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
                             <i class="fab fa-python mr-2"></i> Python
                         </div>
-                        <div class="skill-badge bg-yellow-100 text-yellow-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
+                        <div
+                            class="skill-badge bg-yellow-100 text-yellow-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
                             <i class="fab fa-js mr-2"></i> JavaScript
                         </div>
-                        <div class="skill-badge bg-orange-100 text-orange-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
+                        <div
+                            class="skill-badge bg-orange-100 text-orange-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
                             <i class="fas fa-cube mr-2"></i> Scratch
                         </div>
                     </div>
@@ -169,16 +187,20 @@
                         <h3 class="text-xl font-bold text-gray-800">Frameworks & Libraries</h3>
                     </div>
                     <div class="space-y-3">
-                        <div class="skill-badge bg-red-100 text-red-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
+                        <div
+                            class="skill-badge bg-red-100 text-red-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
                             <i class="fab fa-laravel mr-2"></i> Laravel
                         </div>
-                        <div class="skill-badge bg-orange-100 text-orange-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
+                        <div
+                            class="skill-badge bg-orange-100 text-orange-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
                             <i class="fas fa-fire mr-2"></i> CodeIgniter
                         </div>
-                        <div class="skill-badge bg-purple-100 text-purple-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
+                        <div
+                            class="skill-badge bg-purple-100 text-purple-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
                             <i class="fab fa-bootstrap mr-2"></i> Bootstrap
                         </div>
-                        <div class="skill-badge bg-cyan-100 text-cyan-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
+                        <div
+                            class="skill-badge bg-cyan-100 text-cyan-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
                             <i class="fas fa-wind mr-2"></i> Tailwind CSS
                         </div>
                     </div>
@@ -191,19 +213,24 @@
                         <h3 class="text-xl font-bold text-gray-800">Tools & Database</h3>
                     </div>
                     <div class="space-y-3">
-                        <div class="skill-badge bg-blue-100 text-blue-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
+                        <div
+                            class="skill-badge bg-blue-100 text-blue-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
                             <i class="fas fa-database mr-2"></i> MySQL
                         </div>
-                        <div class="skill-badge bg-gray-100 text-gray-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
+                        <div
+                            class="skill-badge bg-gray-100 text-gray-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
                             <i class="fab fa-git-alt mr-2"></i> Git
                         </div>
-                        <div class="skill-badge bg-orange-100 text-orange-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
+                        <div
+                            class="skill-badge bg-orange-100 text-orange-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
                             <i class="fas fa-rocket mr-2"></i> Postman
                         </div>
-                        <div class="skill-badge bg-blue-100 text-blue-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
+                        <div
+                            class="skill-badge bg-blue-100 text-blue-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
                             <i class="fas fa-code mr-2"></i> VSCode
                         </div>
-                        <div class="skill-badge bg-green-100 text-green-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
+                        <div
+                            class="skill-badge bg-green-100 text-green-800 px-3 py-2 rounded-full text-sm font-medium flex items-center">
                             <i class="fas fa-coffee mr-2"></i> NetBeans
                         </div>
                     </div>
@@ -228,7 +255,8 @@
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-gray-800 mb-3">Aplikasi Kos</h3>
-                        <p class="text-gray-600 mb-4 text-sm">Aplikasi desktop untuk pengelolaan penyewaan kos dengan fitur login, CRUD data penyewa, dan manajemen tipe kamar.</p>
+                        <p class="text-gray-600 mb-4 text-sm">Aplikasi desktop untuk pengelolaan penyewaan kos dengan
+                            fitur login, CRUD data penyewa, dan manajemen tipe kamar.</p>
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="bg-red-100 text-red-800 px-2 py-1 rounded text-xs">Java</span>
                             <span class="bg-blue-100 text-blue-800 px-2 py-1 rounded text-xs">MySQL</span>
@@ -247,7 +275,8 @@
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-gray-800 mb-3">Pendaftaran Misa Online</h3>
-                        <p class="text-gray-600 mb-4 text-sm">Aplikasi pendaftaran misa berbasis GUI dengan implementasi struktur data Tree dan sistem level akses.</p>
+                        <p class="text-gray-600 mb-4 text-sm">Aplikasi pendaftaran misa berbasis GUI dengan implementasi
+                            struktur data Tree dan sistem level akses.</p>
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="bg-red-100 text-red-800 px-2 py-1 rounded text-xs">Java</span>
                             <span class="bg-purple-100 text-purple-800 px-2 py-1 rounded text-xs">Tree</span>
@@ -266,7 +295,8 @@
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-gray-800 mb-3">Sistem Informasi Toko</h3>
-                        <p class="text-gray-600 mb-4 text-sm">Sistem informasi web untuk manajemen Toko Matadewa dengan fitur lengkap pengelolaan produk dan transaksi.</p>
+                        <p class="text-gray-600 mb-4 text-sm">Sistem informasi web untuk manajemen Toko Matadewa dengan
+                            fitur lengkap pengelolaan produk dan transaksi.</p>
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="bg-purple-100 text-purple-800 px-2 py-1 rounded text-xs">PHP Native</span>
                             <span class="bg-blue-100 text-blue-800 px-2 py-1 rounded text-xs">MySQL</span>
@@ -284,7 +314,8 @@
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-gray-800 mb-3">Pengenalan BISINDO</h3>
-                        <p class="text-gray-600 mb-4 text-sm">Aplikasi pengenalan abjad Bahasa Isyarat Indonesia menggunakan CNN ResNet-50 untuk klasifikasi gambar.</p>
+                        <p class="text-gray-600 mb-4 text-sm">Aplikasi pengenalan abjad Bahasa Isyarat Indonesia
+                            menggunakan CNN ResNet-50 untuk klasifikasi gambar.</p>
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="bg-blue-100 text-blue-800 px-2 py-1 rounded text-xs">Python</span>
                             <span class="bg-red-100 text-red-800 px-2 py-1 rounded text-xs">CNN</span>
@@ -303,7 +334,8 @@
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-gray-800 mb-3">Undangan Pernikahan Online</h3>
-                        <p class="text-gray-600 mb-4 text-sm">Aplikasi undangan pernikahan digital interaktif dengan fitur RSVP, galeri foto, dan form tamu.</p>
+                        <p class="text-gray-600 mb-4 text-sm">Aplikasi undangan pernikahan digital interaktif dengan
+                            fitur RSVP, galeri foto, dan form tamu.</p>
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="bg-orange-100 text-orange-800 px-2 py-1 rounded text-xs">CodeIgniter 3</span>
                             <span class="bg-purple-100 text-purple-800 px-2 py-1 rounded text-xs">Bootstrap</span>
@@ -356,7 +388,8 @@
                             <h3 class="text-xl font-bold text-gray-800">IT Staff</h3>
                             <p class="text-gray-600">[Nama Perusahaan]</p>
                         </div>
-                        <div class="bg-green-100 text-green-800 px-3 py-1 rounded-full text-sm font-medium mt-2 md:mt-0">
+                        <div
+                            class="bg-green-100 text-green-800 px-3 py-1 rounded-full text-sm font-medium mt-2 md:mt-0">
                             [Tahun]
                         </div>
                     </div>
@@ -379,7 +412,8 @@
                             <h3 class="text-xl font-bold text-gray-800">Freelance Web Developer</h3>
                             <p class="text-gray-600">Undangan Pernikahan Online</p>
                         </div>
-                        <div class="bg-purple-100 text-purple-800 px-3 py-1 rounded-full text-sm font-medium mt-2 md:mt-0">
+                        <div
+                            class="bg-purple-100 text-purple-800 px-3 py-1 rounded-full text-sm font-medium mt-2 md:mt-0">
                             [Tahun]
                         </div>
                     </div>
@@ -402,7 +436,8 @@
                             <h3 class="text-xl font-bold text-gray-800">Freelance Tutor</h3>
                             <p class="text-gray-600">Scratch Programming</p>
                         </div>
-                        <div class="bg-orange-100 text-orange-800 px-3 py-1 rounded-full text-sm font-medium mt-2 md:mt-0">
+                        <div
+                            class="bg-orange-100 text-orange-800 px-3 py-1 rounded-full text-sm font-medium mt-2 md:mt-0">
                             [Tahun]
                         </div>
                     </div>
