--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div>
                     <div class="w-full h-80 bg-gray-200 rounded-lg overflow-hidden flex items-center">
-                        <img src="profil.JPG" alt="Foto Profil" class="w-full object-cover ">
+                        <img src="profil.jpeg" alt="Foto Profil" class="w-full object-cover ">
                     </div>
 
 
