--- a/index.html
+++ b/index.html
@@ -463,220 +463,73 @@
                 </div>
             </div>
         </div>
+
     </section>
 
-    <section class="py-20 bg-gradient-to-br from-indigo-900 via-purple-900 to-pink-800 relative overflow-hidden">
-        <!-- Background decorative elements -->
-        <div class="absolute inset-0 overflow-hidden">
-            <div
-                class="absolute -top-40 -right-40 w-80 h-80 bg-gradient-to-r from-purple-400 to-pink-400 rounded-full opacity-20">
-            </div>
-            <div
-                class="absolute -bottom-40 -left-40 w-96 h-96 bg-gradient-to-r from-blue-400 to-indigo-400 rounded-full opacity-10">
-            </div>
-            <div
-                class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-64 h-64 bg-gradient-to-r from-pink-300 to-purple-300 rounded-full opacity-10">
-            </div>
+   <!-- Timeline Experience -->
+
+<section class="py-20 bg-gradient-to-br from-indigo-900 via-purple-900 to-pink-800 relative overflow-hidden">
+ <!-- Lapisan glossy -->
+  <div class="absolute inset-0 bg-white bg-opacity-10 backdrop-blur-sm"></div>
+
+  <div class="relative max-w-5xl mx-auto px-6">
+    <h2 class="text-3xl font-bold text-center text-white mb-12">Pengalaman Asisten Dosen</h2>
+
+    <div class="relative wrap overflow-hidden p-6 h-full">
+      <!-- Garis Tengah -->
+      <div class="border-l-2 border-white border-opacity-40 absolute h-full left-1/2 transform -translate-x-1/2"></div>
+
+      <!-- Item 1 -->
+      <div class="mb-12 flex justify-between items-center w-full">
+        <div class="w-5/12"></div>
+        <div class="z-20 flex items-center justify-center bg-white text-purple-700 font-bold w-8 h-8 rounded-full shadow">
+          1
         </div>
-
-        <div class="max-w-6xl mx-auto px-6 relative z-10">
-            <!-- Section Header -->
-            <div class="text-center mb-16">
-                <div
-                    class="inline-flex items-center px-4 py-2 bg-white/10 backdrop-blur-sm rounded-full text-white/80 text-sm font-medium mb-4">
-                    <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20">
-                        <path
-                            d="M10.394 2.08a1 1 0 00-.788 0l-7 3a1 1 0 000 1.84L5.25 8.051a.999.999 0 01.356-.257l4-1.714a1 1 0 11.788 1.838L7.667 9.088l1.94.831a1 1 0 00.787 0l7-3a1 1 0 000-1.838l-7-3zM3.31 9.397L5 10.12v4.102a8.969 8.969 0 00-1.05-.174 1 1 0 01-.89-.89 11.115 11.115 0 01.25-3.762zM9.3 16.573A9.026 9.026 0 007 14.935v-3.957l1.818.78a3 3 0 002.364 0l5.508-2.361a11.026 11.026 0 01.25 3.762 1 1 0 01-.89.89 8.968 8.968 0 00-5.35 2.524 1 1 0 01-1.4 0zM6 18a1 1 0 001-1v-2.065a8.935 8.935 0 00-2-.712V17a1 1 0 001 1z" />
-                    </svg>
-                    Perjalanan Akademik
-                </div>
-                <h2 class="text-5xl md:text-6xl font-black text-white mb-4">
-                    Pengalaman
-                    <span class="bg-gradient-to-r from-yellow-300 to-pink-300 bg-clip-text text-transparent">
-                        Kampus
-                    </span>
-                </h2>
-                <p class="text-xl text-white/70 max-w-2xl mx-auto">
-                    Perjalanan sebagai asisten dosen dan kontributor aktif dalam pengembangan akademik
-                </p>
-            </div>
-
-            <!-- Timeline -->
-            <div class="relative">
-                <!-- Timeline line -->
-                <div
-                    class="absolute left-1/2 transform -translate-x-0.5 top-0 bottom-0 w-1 bg-gradient-to-b from-yellow-400 via-pink-400 to-purple-400 hidden md:block">
-                </div>
-
-                <!-- Experience Items -->
-                <div class="space-y-16">
-                    <!-- Item 1 - Kiri -->
-                    <div class="relative flex items-center">
-                        <!-- Timeline dot -->
-                        <div
-                            class="absolute left-1/2 transform -translate-x-1/2 w-6 h-6 bg-gradient-to-r from-yellow-400 to-pink-400 rounded-full border-4 border-white shadow-lg z-10 hidden md:block">
-                        </div>
-
-                        <!-- Content Kiri -->
-                        <div class="w-full md:w-5/12 md:pr-8">
-                            <div
-                                class="bg-white/95 backdrop-blur-sm rounded-2xl p-8 shadow-2xl border border-white/20 hover:shadow-3xl transition-all duration-300 group">
-                                <div class="flex items-center justify-between mb-4">
-                                    <div class="flex items-center space-x-3">
-                                        <div class="p-3 bg-gradient-to-r from-blue-500 to-indigo-600 rounded-xl">
-                                            <svg class="w-6 h-6 text-white" fill="currentColor" viewBox="0 0 20 20">
-                                                <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-                                            </svg>
-                                        </div>
-                                    </div>
-                                    <span
-                                        class="px-3 py-1 bg-green-100 text-green-800 rounded-full text-sm font-semibold">Aktif</span>
-                                </div>
-                                <h3
-                                    class="text-2xl font-bold text-gray-900 mb-2 group-hover:text-indigo-600 transition-colors">
-                                    Asisten Dosen – Pemrograman Java
-                                </h3>
-                                <p class="text-indigo-600 font-semibold mb-4 flex items-center">
-                                    <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20">
-                                        <path fill-rule="evenodd"
-                                            d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" />
-                                    </svg>
-                                    Universitas XYZ | Semester 4 – Sekarang
-                                </p>
-                                <div class="space-y-3">
-                                    <div class="flex items-start space-x-3">
-                                        <div class="w-2 h-2 bg-indigo-500 rounded-full mt-2 flex-shrink-0"></div>
-                                        <p class="text-gray-700">Membimbing mahasiswa dalam praktik Java (OOP & GUI)</p>
-                                    </div>
-                                    <div class="flex items-start space-x-3">
-                                        <div class="w-2 h-2 bg-indigo-500 rounded-full mt-2 flex-shrink-0"></div>
-                                        <p class="text-gray-700">Menyusun soal latihan & memberi arahan coding</p>
-                                    </div>
-                                    <div class="flex items-start space-x-3">
-                                        <div class="w-2 h-2 bg-indigo-500 rounded-full mt-2 flex-shrink-0"></div>
-                                        <p class="text-gray-700">Mendukung dosen dalam evaluasi tugas/laporan</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Spacer untuk desktop -->
-                        <div class="hidden md:block w-2/12"></div>
-                    </div>
-
-                    <!-- Item 2 - Kanan -->
-                    <div class="relative flex items-center">
-                        <!-- Timeline dot -->
-                        <div
-                            class="absolute left-1/2 transform -translate-x-1/2 w-6 h-6 bg-gradient-to-r from-pink-400 to-purple-500 rounded-full border-4 border-white shadow-lg z-10 hidden md:block">
-                        </div>
-
-                        <!-- Spacer untuk desktop -->
-                        <div class="hidden md:block w-2/12"></div>
-
-                        <!-- Content Kanan -->
-                        <div class="w-full md:w-5/12 md:pl-8">
-                            <div
-                                class="bg-white/95 backdrop-blur-sm rounded-2xl p-8 shadow-2xl border border-white/20 hover:shadow-3xl transition-all duration-300 group">
-                                <div class="flex items-center justify-between mb-4">
-                                    <div class="flex items-center space-x-3">
-                                        <div class="p-3 bg-gradient-to-r from-purple-500 to-pink-600 rounded-xl">
-                                            <svg class="w-6 h-6 text-white" fill="currentColor" viewBox="0 0 20 20">
-                                                <path
-                                                    d="M3 4a1 1 0 011-1h12a1 1 0 011 1v2a1 1 0 01-1 1H4a1 1 0 01-1-1V4zM3 10a1 1 0 011-1h6a1 1 0 011 1v6a1 1 0 01-1 1H4a1 1 0 01-1-1v-6zM14 9a1 1 0 00-1 1v6a1 1 0 001 1h2a1 1 0 001-1v-6a1 1 0 00-1-1h-2z" />
-                                            </svg>
-                                        </div>
-                                    </div>
-                                    <span
-                                        class="px-3 py-1 bg-purple-100 text-purple-800 rounded-full text-sm font-semibold">Selesai</span>
-                                </div>
-                                <h3
-                                    class="text-2xl font-bold text-gray-900 mb-2 group-hover:text-purple-600 transition-colors">
-                                    Asisten Dosen – Basis Data
-                                </h3>
-                                <p class="text-purple-600 font-semibold mb-4 flex items-center">
-                                    <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20">
-                                        <path fill-rule="evenodd"
-                                            d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" />
-                                    </svg>
-                                    Universitas XYZ | Semester 5
-                                </p>
-                                <div class="space-y-3">
-                                    <div class="flex items-start space-x-3">
-                                        <div class="w-2 h-2 bg-purple-500 rounded-full mt-2 flex-shrink-0"></div>
-                                        <p class="text-gray-700">Mendampingi praktikum SQL & perancangan database</p>
-                                    </div>
-                                    <div class="flex items-start space-x-3">
-                                        <div class="w-2 h-2 bg-purple-500 rounded-full mt-2 flex-shrink-0"></div>
-                                        <p class="text-gray-700">Membimbing mahasiswa memahami ERD & normalisasi</p>
-                                    </div>
-                                    <div class="flex items-start space-x-3">
-                                        <div class="w-2 h-2 bg-purple-500 rounded-full mt-2 flex-shrink-0"></div>
-                                        <p class="text-gray-700">Memberikan feedback terhadap laporan praktikum</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Item 3 - Kiri (contoh tambahan) -->
-                    <div class="relative flex items-center">
-                        <!-- Timeline dot -->
-                        <div
-                            class="absolute left-1/2 transform -translate-x-1/2 w-6 h-6 bg-gradient-to-r from-green-400 to-teal-500 rounded-full border-4 border-white shadow-lg z-10 hidden md:block">
-                        </div>
-
-                        <!-- Content Kiri -->
-                        <div class="w-full md:w-5/12 md:pr-8">
-                            <div
-                                class="bg-white/95 backdrop-blur-sm rounded-2xl p-8 shadow-2xl border border-white/20 hover:shadow-3xl transition-all duration-300 group">
-                                <div class="flex items-center justify-between mb-4">
-                                    <div class="flex items-center space-x-3">
-                                        <div class="p-3 bg-gradient-to-r from-green-500 to-teal-600 rounded-xl">
-                                            <svg class="w-6 h-6 text-white" fill="currentColor" viewBox="0 0 20 20">
-                                                <path
-                                                    d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3z" />
-                                            </svg>
-                                        </div>
-                                    </div>
-                                    <span
-                                        class="px-3 py-1 bg-teal-100 text-teal-800 rounded-full text-sm font-semibold">Selesai</span>
-                                </div>
-                                <h3
-                                    class="text-2xl font-bold text-gray-900 mb-2 group-hover:text-teal-600 transition-colors">
-                                    Ketua Divisi IT – Himpunan Mahasiswa
-                                </h3>
-                                <p class="text-teal-600 font-semibold mb-4 flex items-center">
-                                    <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20">
-                                        <path fill-rule="evenodd"
-                                            d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" />
-                                    </svg>
-                                    HIMTI XYZ | 2023 – 2024
-                                </p>
-                                <div class="space-y-3">
-                                    <div class="flex items-start space-x-3">
-                                        <div class="w-2 h-2 bg-teal-500 rounded-full mt-2 flex-shrink-0"></div>
-                                        <p class="text-gray-700">Mengembangkan website dan sistem informasi himpunan</p>
-                                    </div>
-                                    <div class="flex items-start space-x-3">
-                                        <div class="w-2 h-2 bg-teal-500 rounded-full mt-2 flex-shrink-0"></div>
-                                        <p class="text-gray-700">Mengelola infrastruktur IT untuk berbagai event</p>
-                                    </div>
-                                    <div class="flex items-start space-x-3">
-                                        <div class="w-2 h-2 bg-teal-500 rounded-full mt-2 flex-shrink-0"></div>
-                                        <p class="text-gray-700">Memimpin tim 8 anggota dalam proyek digitalisasi</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Spacer untuk desktop -->
-                        <div class="hidden md:block w-2/12"></div>
-                    </div>
-                </div>
-            </div>
+        <div class="bg-white bg-opacity-90 rounded-xl shadow-md p-6 w-5/12">
+          <h3 class="font-semibold text-lg text-purple-900">Asisten Dosen – Pemrograman Berorientasi Obyek I</h3>
+          <p class="text-sm text-gray-700 mt-2">Membimbing praktikum Java OOP dasar, membantu debugging, serta memberi arahan pada pembuatan project sederhana.</p>
         </div>
-    </section>
+      </div>
+
+      <!-- Item 2 -->
+      <div class="mb-12 flex justify-between flex-row-reverse items-center w-full">
+        <div class="w-5/12"></div>
+        <div class="z-20 flex items-center justify-center bg-white text-purple-700 font-bold w-8 h-8 rounded-full shadow">
+          2
+        </div>
+        <div class="bg-white bg-opacity-90 rounded-xl shadow-md p-6 w-5/12">
+          <h3 class="font-semibold text-lg text-purple-900">Asisten Dosen – Struktur Data Linear</h3>
+          <p class="text-sm text-gray-700 mt-2">Membimbing mahasiswa pada materi <em>Stack</em> dan <em>Queue</em>, implementasi dengan Java, serta latihan operasi push, pop, enqueue, dequeue.</p>
+        </div>
+      </div>
+
+      <!-- Item 3 -->
+      <div class="mb-12 flex justify-between items-center w-full">
+        <div class="w-5/12"></div>
+        <div class="z-20 flex items-center justify-center bg-white text-purple-700 font-bold w-8 h-8 rounded-full shadow">
+          3
+        </div>
+        <div class="bg-white bg-opacity-90 rounded-xl shadow-md p-6 w-5/12">
+          <h3 class="font-semibold text-lg text-purple-900">Asisten Dosen – Rekayasa Perangkat Lunak</h3>
+          <p class="text-sm text-gray-700 mt-2">Mendampingi praktikum analisis kebutuhan, pembuatan UML, dan implementasi sistem sederhana berbasis web.</p>
+        </div>
+      </div>
+
+      <!-- Item 4 -->
+      <div class="mb-12 flex justify-between flex-row-reverse items-center w-full">
+        <div class="w-5/12"></div>
+        <div class="z-20 flex items-center justify-center bg-white text-purple-700 font-bold w-8 h-8 rounded-full shadow">
+          4
+        </div>
+        <div class="bg-white bg-opacity-90 rounded-xl shadow-md p-6 w-5/12">
+          <h3 class="font-semibold text-lg text-purple-900">Asisten Dosen – Struktur Data Non Linear</h3>
+          <p class="text-sm text-gray-700 mt-2">Membimbing mahasiswa dalam materi <em>Tree</em> dan <em>Graph</em>, termasuk traversal dan implementasi algoritma dasar.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="py-20 bg-white">
