--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div>
                     <div class="w-full h-80 bg-gray-200 rounded-lg overflow-hidden flex items-center">
-                        <img src="profil.jpeg" alt="Foto Profil" class="w-full object-cover ">
+                        <img src="profil.JPG" alt="Foto Profil" class="w-full object-cover ">
                     </div>
 
 
@@ -471,9 +471,9 @@
         <!-- Lapisan glossy -->
         <div class="absolute inset-0 bg-white bg-opacity-10 backdrop-blur-sm"></div>
         <div class="relative max-w-5xl mx-auto px-6">
-           <h1 class="text-center text-white text-5xl md:text-6xl font-black drop-shadow-[0_4px_10px_rgba(0,0,0,0.7)]">
-  Pengalaman Akademik
-</h1>
+            <h1 class="text-center text-white text-5xl md:text-6xl font-black drop-shadow-[0_4px_10px_rgba(0,0,0,0.7)]">
+                Pengalaman Akademik
+            </h1>
 
             <div class="relative overflow-hidden p-6 h-full">
                 <!-- Garis Tengah - desktop only -->
@@ -499,6 +499,7 @@
                     <div class="bg-white bg-opacity-90 rounded-xl shadow-md p-6 flex-1 md:w-5/12 md:flex-none">
                         <h3 class="font-semibold text-lg text-purple-900">Asisten Dosen – Pemrograman Berorientasi Obyek
                             I</h3>
+                        <p class="text-gray-600 text-xs">Februari 2022 - Juni 2022</p>
                         <p class="text-sm text-gray-700 mt-2">Membimbing praktikum Java OOP dasar, membantu debugging,
                             serta memberi arahan pada pembuatan project sederhana.</p>
                     </div>
@@ -519,6 +520,7 @@
                     <!-- Content -->
                     <div class="bg-white bg-opacity-90 rounded-xl shadow-md p-6 flex-1 md:w-5/12 md:flex-none">
                         <h3 class="font-semibold text-lg text-purple-900">Asisten Dosen – Struktur Data Linear</h3>
+                        <p class="text-gray-600 text-xs">Agustus 2022 - Desember 2022</p>
                         <p class="text-sm text-gray-700 mt-2">Membimbing mahasiswa pada materi <em>Stack</em> dan
                             <em>Queue</em>, implementasi dengan Java, serta latihan operasi push, pop, enqueue, dequeue.
                         </p>
@@ -540,6 +542,7 @@
                     <!-- Content -->
                     <div class="bg-white bg-opacity-90 rounded-xl shadow-md p-6 flex-1 md:w-5/12 md:flex-none">
                         <h3 class="font-semibold text-lg text-purple-900">Asisten Dosen – Rekayasa Perangkat Lunak</h3>
+                        <p class="text-gray-600 text-xs">Februari 2023 - Juni 2023</p>
                         <p class="text-sm text-gray-700 mt-2">Mendampingi praktikum analisis kebutuhan, pembuatan UML,
                             dan implementasi sistem sederhana berbasis web.</p>
                     </div>
@@ -560,8 +563,53 @@
                     <!-- Content -->
                     <div class="bg-white bg-opacity-90 rounded-xl shadow-md p-6 flex-1 md:w-5/12 md:flex-none">
                         <h3 class="font-semibold text-lg text-purple-900">Asisten Dosen – Struktur Data Non Linear</h3>
+                        <p class="text-gray-600 text-xs">Agustus 2024 - Desember 2024</p>
                         <p class="text-sm text-gray-700 mt-2">Membimbing mahasiswa dalam materi <em>Tree</em> dan
-                            <em>Graph</em>, termasuk traversal dan implementasi algoritma dasar.</p>
+                            <em>Graph</em>, termasuk traversal dan implementasi algoritma dasar.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Item 3 -->
+                <div class="mb-12 flex items-center w-full md:justify-between">
+                    <!-- Mobile: content after dot -->
+                    <div
+                        class="w-8 h-8 bg-white text-purple-700 font-bold rounded-full shadow flex items-center justify-center z-20 mr-6 md:hidden">
+                        5</div>
+                    <!-- Desktop: spacer left -->
+                    <div class="w-5/12 hidden md:block"></div>
+                    <!-- Desktop: center dot -->
+                    <div
+                        class="z-20 items-center justify-center bg-white text-purple-700 font-bold w-8 h-8 rounded-full shadow hidden md:flex">
+                        5</div>
+                    <!-- Content -->
+                    <div class="bg-white bg-opacity-90 rounded-xl shadow-md p-6 flex-1 md:w-5/12 md:flex-none">
+                        <h3 class="font-semibold text-lg text-purple-900">Asisten Dosen – Rekayasa Perangkat Lunak</h3>
+                        <p class="text-gray-600 text-xs">Februari 2023 - Juni 2023</p>
+                        <p class="text-sm text-gray-700 mt-2">Mendampingi praktikum analisis kebutuhan, pembuatan UML,
+                            dan implementasi sistem sederhana berbasis web.</p>
+                    </div>
+                </div>
+
+                <!-- Item 4 -->
+                <div class="mb-12 flex items-center w-full md:justify-between md:flex-row-reverse">
+                    <!-- Mobile: content after dot -->
+                    <div
+                        class="w-8 h-8 bg-white text-purple-700 font-bold rounded-full shadow flex items-center justify-center z-20 mr-6 md:hidden">
+                        6</div>
+                    <!-- Desktop: spacer right -->
+                    <div class="w-5/12 hidden md:block"></div>
+                    <!-- Desktop: center dot -->
+                    <div
+                        class="z-20 items-center justify-center bg-white text-purple-700 font-bold w-8 h-8 rounded-full shadow hidden md:flex">
+                        6</div>
+                    <!-- Content -->
+                    <div class="bg-white bg-opacity-90 rounded-xl shadow-md p-6 flex-1 md:w-5/12 md:flex-none">
+                        <h3 class="font-semibold text-lg text-purple-900">Asisten Dosen – Struktur Data Non Linear</h3>
+                        <p class="text-gray-600 text-xs">Agustus 2024 - Desember 2024</p>
+                        <p class="text-sm text-gray-700 mt-2">Membimbing mahasiswa dalam materi <em>Tree</em> dan
+                            <em>Graph</em>, termasuk traversal dan implementasi algoritma dasar.
+                        </p>
                     </div>
                 </div>
             </div>
