--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 </div>
             </div>
             <h1 class="text-4xl md:text-6xl font-bold mb-4">Fullstack Developer</h1>
+            <h2 class="text-3xl md:text-3xl font-bold mb-4">Ribka Restu</h2>
             <p class="text-xl md:text-2xl mb-8 opacity-90">Backend & Web Application Specialist</p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
                 <a href="#projects"
@@ -125,11 +126,7 @@
                             <h4 class="font-semibold text-gray-800">Web Development</h4>
                             <p class="text-sm text-gray-600">PHP, Laravel, CodeIgniter</p>
                         </div>
-                        <div class="bg-purple-50 p-4 rounded-lg">
-                            <i class="fas fa-brain text-purple-600 text-2xl mb-2"></i>
-                            <h4 class="font-semibold text-gray-800">Machine Learning</h4>
-                            <p class="text-sm text-gray-600">Python, CNN, Deep Learning</p>
-                        </div>
+                       
                         <div class="bg-orange-50 p-4 rounded-lg">
                             <i class="fas fa-users text-orange-600 text-2xl mb-2"></i>
                             <h4 class="font-semibold text-gray-800">Team Work</h4>
@@ -251,12 +248,16 @@
                 <!-- Project 1 -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden card-hover">
                     <div class="bg-blue-600 h-48 flex items-center justify-center text-white text-6xl">
-                        <i class="fas fa-home"></i>
+                        <img src="kos.png" alt="Aplikasi Kos" class="w-full h-48 object-cover object-top">
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-gray-800 mb-3">Aplikasi Kos</h3>
-                        <p class="text-gray-600 mb-4 text-sm">Aplikasi desktop untuk pengelolaan penyewaan kos dengan
+                        <p class="text-gray-600 text-sm">Aplikasi desktop untuk pengelolaan penyewaan kos dengan
                             fitur login, CRUD data penyewa, dan manajemen tipe kamar.</p>
+                        <a href="https://github.com/RibkaRestu/Aplikasi-Kos" target="_blank"
+                            class="text-blue-600 text-sm hover:underline inline-block">
+                            🔗 Lihat di GitHub
+                        </a>
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="bg-red-100 text-red-800 px-2 py-1 rounded text-xs">Java</span>
                             <span class="bg-blue-100 text-blue-800 px-2 py-1 rounded text-xs">MySQL</span>
@@ -271,7 +272,8 @@
                 <!-- Project 2 -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden card-hover">
                     <div class="bg-purple-600 h-48 flex items-center justify-center text-white text-6xl">
-                        <i class="fas fa-church"></i>
+                        <img src="misa.png" alt="Aplikasi Misa" class="w-full h-48 object-cover object-top">
+
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-gray-800 mb-3">Pendaftaran Misa Online</h3>
@@ -291,7 +293,7 @@
                 <!-- Project 3 -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden card-hover">
                     <div class="bg-green-600 h-48 flex items-center justify-center text-white text-6xl">
-                        <i class="fas fa-store"></i>
+                        <img src="toko.png" alt="Aplikasi Toko" class="w-full h-48 object-cover object-top">
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-gray-800 mb-3">Sistem Informasi Toko</h3>
@@ -310,7 +312,8 @@
                 <!-- Project 4 -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden card-hover">
                     <div class="bg-orange-600 h-48 flex items-center justify-center text-white text-6xl">
-                        <i class="fas fa-hand-paper"></i>
+                        <img src="bisindo.png" alt="Aplikasi Bisindo" class="w-full h-48 object-cover object-top">
+
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-gray-800 mb-3">Pengenalan BISINDO</h3>
@@ -330,7 +333,8 @@
                 <!-- Project 5 -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden card-hover">
                     <div class="bg-pink-600 h-48 flex items-center justify-center text-white text-6xl">
-                        <i class="fas fa-heart"></i>
+                        <img src="undangan.png" alt="Aplikasi Bisindo" class="w-full h-48 object-cover object-top">
+
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-gray-800 mb-3">Undangan Pernikahan Online</h3>
@@ -569,49 +573,6 @@
                         </p>
                     </div>
                 </div>
-
-                <!-- Item 3 -->
-                <div class="mb-12 flex items-center w-full md:justify-between">
-                    <!-- Mobile: content after dot -->
-                    <div
-                        class="w-8 h-8 bg-white text-purple-700 font-bold rounded-full shadow flex items-center justify-center z-20 mr-6 md:hidden">
-                        5</div>
-                    <!-- Desktop: spacer left -->
-                    <div class="w-5/12 hidden md:block"></div>
-                    <!-- Desktop: center dot -->
-                    <div
-                        class="z-20 items-center justify-center bg-white text-purple-700 font-bold w-8 h-8 rounded-full shadow hidden md:flex">
-                        5</div>
-                    <!-- Content -->
-                    <div class="bg-white bg-opacity-90 rounded-xl shadow-md p-6 flex-1 md:w-5/12 md:flex-none">
-                        <h3 class="font-semibold text-lg text-purple-900">Asisten Dosen – Rekayasa Perangkat Lunak</h3>
-                        <p class="text-gray-600 text-xs">Februari 2023 - Juni 2023</p>
-                        <p class="text-sm text-gray-700 mt-2">Mendampingi praktikum analisis kebutuhan, pembuatan UML,
-                            dan implementasi sistem sederhana berbasis web.</p>
-                    </div>
-                </div>
-
-                <!-- Item 4 -->
-                <div class="mb-12 flex items-center w-full md:justify-between md:flex-row-reverse">
-                    <!-- Mobile: content after dot -->
-                    <div
-                        class="w-8 h-8 bg-white text-purple-700 font-bold rounded-full shadow flex items-center justify-center z-20 mr-6 md:hidden">
-                        6</div>
-                    <!-- Desktop: spacer right -->
-                    <div class="w-5/12 hidden md:block"></div>
-                    <!-- Desktop: center dot -->
-                    <div
-                        class="z-20 items-center justify-center bg-white text-purple-700 font-bold w-8 h-8 rounded-full shadow hidden md:flex">
-                        6</div>
-                    <!-- Content -->
-                    <div class="bg-white bg-opacity-90 rounded-xl shadow-md p-6 flex-1 md:w-5/12 md:flex-none">
-                        <h3 class="font-semibold text-lg text-purple-900">Asisten Dosen – Struktur Data Non Linear</h3>
-                        <p class="text-gray-600 text-xs">Agustus 2024 - Desember 2024</p>
-                        <p class="text-sm text-gray-700 mt-2">Membimbing mahasiswa dalam materi <em>Tree</em> dan
-                            <em>Graph</em>, termasuk traversal dan implementasi algoritma dasar.
-                        </p>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -631,7 +592,7 @@
                     <h3 class="text-2xl font-bold text-gray-800 mb-6">Contact Information</h3>
                     <div class="space-y-6">
                         <div class="flex items-center">
-                            <div class="bg-blue-100 p-3 rounded-lg mr-4">
+                            <div class="bg-gray-100 p-3 rounded-lg mr-4">
                                 <i class="fas fa-envelope text-blue-600 text-xl"></i>
                             </div>
                             <div>
@@ -644,7 +605,7 @@
                             </div>
                         </div>
                         <div class="flex items-center">
-                            <div class="bg-blue-100 p-3 rounded-lg mr-4">
+                            <div class="bg-gray-100 p-3 rounded-lg mr-4">
                                 <i class="fab fa-linkedin text-blue-600 text-xl"></i>
                             </div>
                             <div>
@@ -669,7 +630,7 @@
                             </div>
                         </div>
                         <div class="flex items-center">
-                            <div class="bg-green-100 p-3 rounded-lg mr-4">
+                            <div class="bg-gray-100 p-3 rounded-lg mr-4">
                                 <i class="fas fa-phone text-blue-600 text-xl"></i>
                             </div>
                             <div>
