--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                             </div>
                             <div>
                                 <h4 class="font-semibold text-gray-800">LinkedIn</h4>
-                                <a href="linkedin.com/in/maria-ribka-restu-sukma-ningsih-9b2340232"
+                                <a href="https://www.linkedin.com/in/maria-ribka-restu-sukma-ningsih-9b2340232/"
                                     class="text-blue-600 hover:underline" target="_blank">
                                     Maria Ribka Restu Sukma Ningsih
                                 </a>
